# noaaplotter

./: .gitignore  CHANGELOG.md  CITATION.cff  NOAA_tests.ipynb  README.md  download_data.py  download_data_ERA5.py  environment.yml  plot_NOAA.py  plot_daily.py  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  python-package.yml
data/: weather_station_orlando.csv
examples/: example_daily_series.py  example_daily_series_winter.py  example_monthly_series.py
noaaplotter/: __init__.py  dataset.py  download_utils.py  noaaplotter.py  plot_utils.py  utils.py
noaaplotter/scripts/: download_data.py  download_data_ERA5.py  download_data_SST.py  plot_daily.py  plot_monthly.py
noaaplotter/tools/: dataset.py  download_utils.py  utils.py
noaaplotter/utils/: dataset.py  download_utils.py  plot_utils.py  utils.py
scripts/: download_data.py  download_data_ERA5.py  download_data_SST.py  plot_NOAA.py
tests/: test_download_functions.py  test_download_scripts.py  tests_download_NOAA.py
