[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noaaplotter"
version = "0.5.3"
description = "Package to plot fancy climate/weather data of NOAA"
authors = [
    { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" }
]
readme = "README.md"  # Specify a README file if available
# homepage = "https://github.com/initze/noaaplotter"
keywords = ["climate", "weather", "NOAA", "plotting"]

requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.2",
    "matplotlib>=3.9",
    "requests",
    "joblib>=1.4",
    "tqdm>=4.67",
    "geemap>=0.35"
]

[tool.setuptools.packages.find]
where = ["noaaplotter"]

[project.scripts]
plot_daily = "scripts.plot_daily:main"
plot_monthly = "scripts.plot_monthly:main"
download_data = "scripts.download_data:main"
download_data_ERA5 = "scripts.download_data_ERA5:main"